--- a/activity2-1.html
+++ b/activity2-1.html
@@ -5,14 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Structure </title>
+    <style>
+        h3 {
+            color:red;
+            background-color:lightgrey;
+        }
+
+        body {
+            background-image: url("./Mmsu1.jpg");
+            background-repeat: no-repeat;
+            background-position:center;
+            background-attachment:fixed;
+            background: size 800px;;
+        }
+        p {
+        
+        }
+        
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <h1>MMSU - College of Industrial Technology</h1>
-    <h3>College Goal</h3>
+    <h1 style="color:  chartreuse; background-color:blue;">MMSU - College of Industrial Technology</h1>
+    <h3 style="color:blueviolet;">College Goal</h3>
     <p>The College shall provide advanced technology education and training for countryside development.The college is committed to educate and train students to
         become skilled workers, knowledgeable and competent home economics and technology teachers, and effective managers who will contribute immensely to 
         the attainment of socio-economic stability of the region and the whole nation.
     </p>
+    <h3 style="color:dodgerblue;">Address</h3>
+    Brgy 7-B Nuestra Señora de Natividad
+    <br>Laoag City Ilocos Norte</br>
+
     <h3>BS in Industrial Technology</h3>
     <p>
         The Bachelor of Science in Industrial Technology Program is a four-year degree program which prepares workers for supervisory and managerial positions 
@@ -22,7 +48,7 @@
     <p>
         Specifically, the program aims to produce graduates who are able to:
     </p>
-    <ol type="a">
+    <ul type="circle">
         <li>Practice the profession ethically and responsibly.</li>
         <li>Keep abreast with the developments in technology.</li>
         <li>Use techniques, skills, and modern technological tools necessary for professional practice.</li>
@@ -30,7 +56,8 @@
         <li>Communicate effectively to the society the various technological projects and the benefits that can be derived from it.</li>
         <li>Know contemporary issues and its implications to society.</li>
         <li>Pursue lifelong learning for personal and professional growth through varied experiential and field-based opportunities.</li>
+        <li>Develop of Web site employing full stack development</li>
     </ol>
-    <p>MMSU-CIT Copyright &copy 2021</p>
+    <p style="text-align: center;">MMSU-CIT Copyright &copy 2021</p>
 </body>
 </html>
